# calendar-rs

./: .gitignore  Cargo.toml  README.md  calendar.1.scd  flake.nix  justfile
.github/workflows/: ci.yml
src/: args.rs  calendar.rs  cli.rs  commands.rs  date.rs  event.rs  main.rs  storage.rs  sync.rs
src/calendar/: events.rs  recurring.rs
src/display/: calendar.rs  event.rs  list.rs
src/storage/: files.rs  ics.rs
