[package]
name = "calendar-rs"
description = "Cli tool for calendar"
authors = ["Paul Chambaz <paul.chambaz@tuta.com>"]
homepage = "https://github.com/paulchambaz/calendar-rs"
version = "1.0.0"
edition = "2021"
include = ["src/**/*", "README.md"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/taiga-cli"
keywords = []

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.10.5"
uuid = "1.10.0"

[[bin]]
name = "calendar"
path = "src/main.rs"
