[package]
name = "calendar-rs"
description = "Calendar-rs is a small cli to handle your calendars from the terminal"
authors = ["Paul Chambaz <paul.chambaz@tutanota.com>"]
homepage = "https://github.com/paulchambaz/calendar-rs"
version = "1.0.2"
edition = "2021"
include = ["src/**/*", "README.md"]
license-file = "LICENSE"
readme = "README.md"
documentation = "https://docs.rs/calendar-rs"
keywords = []

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
dirs = "5.0.1"
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.10.5"
terminal_size = "0.3.0"
uuid = { version = "1.10.0", features = ["v4"] }

[[bin]]
name = "calendar"
path = "src/main.rs"
